added displaying and frequency counting

--- a/package.yaml
+++ b/package.yaml
@@ -25,9 +25,10 @@ ghc-options:
 
 dependencies:
 - base >= 4.7 && < 5
+- containers
+- finite-typelits
 - profunctors
 - reflection
-- finite-typelits
 - tagged
 
 library:
