--- a/package.yaml
+++ b/package.yaml
@@ -27,9 +27,12 @@ dependencies:
 - base >= 4.7 && < 5
 - containers
 - finite-typelits
+- ghc-typelits-knownnat
+- ghc-typelits-natnormalise
 - profunctors
 - reflection
 - tagged
+- vector-sized
 
 library:
   source-dirs: src
