--- a/stack.yaml
+++ b/stack.yaml
@@ -35,10 +35,13 @@ resolver: nightly-2018-08-13
 #  - wai
 packages:
 - .
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps:
+- vector-sized-1.0.4.0
+- indexed-list-literals-0.2.1.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
