--- a/stack.yaml
+++ b/stack.yaml
@@ -44,6 +44,11 @@ extra-deps:
 - vector-sized-1.1.1.0
 - indexed-list-literals-0.2.1.2
 
+build:
+  haddock-arguments:
+    haddock-args:
+    - --optghc=-fdefer-type-errors
+
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
